--- a/ui/src/components/Navbar/ScopedSearchBox.scss
+++ b/ui/src/components/Navbar/ScopedSearchBox.scss
@@ -17,10 +17,6 @@
     &__scope-button {
       white-space: nowrap;
       color: white !important;
-    }
-
-
-    &__scope-button {
       background: $gray1 !important;
       box-shadow: none !important;
       padding: 5px 10px;
@@ -31,6 +27,15 @@
 
       .bp3-icon {
         color: white !important;
+      }
+    }
+
+    &__popover {
+      .bp3-menu {
+        background: $gray1;
+        border-radius: 0;
+        box-shadow: none;
+        z-index: 100;
       }
     }
   }
